<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".products.EpoxyFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.gdsc_app.model.OrderViewModel" />

        <variable
            name="epoxyFragment"
            type="com.example.gdsc_app.products.EpoxyFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/epoxy_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/vanilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/_2315_jet_black)}"
                    android:onClick="@{() -> viewModel.setepoxy(@string/_2315_jet_black)}"
                    android:text="@string/_2315_jet_black" />

                <RadioButton
                    android:id="@+id/chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/_2390_teracotta)}"
                    android:onClick="@{() -> viewModel.setepoxy(@string/_2390_teracotta)}"
                    android:text="@string/_2390_teracotta" />

                <RadioButton
                    android:id="@+id/red_velvet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/_2376_coffee)}"
                    android:onClick="@{() -> viewModel.setepoxy(@string/_2376_coffee)}"
                    android:text="@string/_2376_coffee" />

                <RadioButton
                    android:id="@+id/salted_caramel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/_2372_copper_brown)}"
                    android:onClick="@{() -> viewModel.setepoxy(@string/_2372_copper_brown)}"
                    android:text="@string/_2372_copper_brown" />

            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.gdsc_app.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/epoxy_options" />


            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> epoxyFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintTop_toBottomOf="@id/divider"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> epoxyFragment.goToNextScreen()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>