<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".product_atrributes.ShiningFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.gdsc_app.model.OrderViewModel" />

        <variable
            name="shiningFragment"
            type="com.example.gdsc_app.product_atrributes.ShiningFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/shining_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/vanilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/golden_shine)}"
                    android:onClick="@{() -> viewModel.setShining(@string/golden_shine)}"
                    android:text="@string/golden_shine" />

                <RadioButton
                    android:id="@+id/chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/silver_shine)}"
                    android:onClick="@{() -> viewModel.setShining(@string/silver_shine)}"
                    android:text="@string/silver_shine" />

                <RadioButton
                    android:id="@+id/red_velvet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/simple_shine)}"
                    android:onClick="@{() -> viewModel.setShining(@string/simple_shine)}"
                    android:text="@string/simple_shine" />

                <RadioButton
                    android:id="@+id/salted_caramel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.shining.equals(@string/copper_shine)}"
                    android:onClick="@{() -> viewModel.setShining(@string/copper_shine)}"
                    android:text="@string/copper_shine" />

            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.gdsc_app.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shining_options" />


            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> shiningFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintTop_toBottomOf="@id/divider"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> shiningFragment.goToNextScreen()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>