<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for order summary -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".product_atrributes.SummaryFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.gdsc_app.model.OrderViewModel" />

        <variable
            name="summaryFragment"
            type="com.example.gdsc_app.product_atrributes.SummaryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Group the order details into a single ViewGroup and set focusable = true,
                 so all fields will be read aloud together by the accessibility service -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_label"
                    style="@style/Widget.gdsc_app.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:textAllCaps="true"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/product_detail"
                    style="@style/Widget.gdsc_app.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.epoxygrout}"
                    tools:text="Product Name" />

                <View
                    android:id="@+id/divider1"
                    style="@style/Widget.gdsc_app.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:id="@+id/quantity_label"
                    style="@style/Widget.gdsc_app.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/Widget.gdsc_app.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.quantity}"
                    tools:text="Quantity of Product" />

                <View
                    android:id="@+id/divider2"
                    style="@style/Widget.gdsc_app.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />
                <TextView
                    android:id="@+id/shining_label"
                    style="@style/Widget.gdsc_app.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shining"
                    android:textAllCaps="true"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/shining_detail"
                    style="@style/Widget.gdsc_app.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.shining.toString()}"
                    tools:text="Shine" />

                <View
                    android:id="@+id/divider3"
                    style="@style/Widget.gdsc_app.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:id="@+id/date_label"
                    style="@style/Widget.gdsc_app.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_date" />

                <TextView
                    android:id="@+id/date"
                    style="@style/Widget.gdsc_app.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.date.toString()}"
                    tools:text="dd MM YYYY" />

                <View
                    android:id="@+id/divider4"
                    style="Widget.gdsc_app.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp" />

            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> summaryFragment.addOrder()}"
                android:text="@string/add_order" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>
</layout>